--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/ianrose/deventy#readme",
   "devDependencies": {
+    "@11ty/eleventy-navigation": "^0.1.5",
     "light-server": "2.6.4"
   },
   "dependencies": {
